--- a/charts/templates/apps-networks.yaml
+++ b/charts/templates/apps-networks.yaml
@@ -22,7 +22,7 @@ spec:
       port:  {{ .port }}
       targetPort: {{ .targetPort }}
   selector:
-    deploymentconfig: "{{ $gateway_name }}-{{ $env }}"
+    deploymentconfig: "{{ .name }}-{{ $env }}"
 
 ---
 
@@ -72,7 +72,7 @@ spec:
       port:  {{ .port }}
       targetPort: {{ .targetPort }}
   selector:
-    deploymentconfig: "{{ $gateway_name }}-{{ $env }}"
+    deploymentconfig: "{{ .name }}-{{ $env }}"
 
 ---
 
@@ -122,7 +122,7 @@ spec:
       port:  {{ .port }}
       targetPort: {{ .targetPort }}
   selector:
-    deploymentconfig: "{{ $gateway_name }}-{{ $env }}"
+    deploymentconfig: "{{ .name }}-{{ $env }}"
 
 ---
 
@@ -172,7 +172,7 @@ spec:
       port:  {{ .port }}
       targetPort: {{ .targetPort }}
   selector:
-    deploymentconfig: "{{ $gateway_name }}-{{ $env }}"
+    deploymentconfig: "{{ .name }}-{{ $env }}"
 
 ---
 
