secret for storage

--- a/charts/templates/secrets.yml
+++ b/charts/templates/secrets.yml
@@ -23,3 +23,16 @@ data:
   password: {{ default "" .Values.dbs.sr_3d_layers.password | b64enc | quote }}
   username: {{ default "" .Values.dbs.sr_3d_layers.username | b64enc | quote }}
 type: Opaque
+
+
+---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: "{{ $secretName }}-{{ $env }}"
+  namespace: {{ $namespace }}
+
+data:
+  azurestorageaccountkey: {{ default "" .Values.storage.azurestorageaccountkey}}
+  azurestorageaccountname: {{ default "" .Values.storage.azurestorageaccountname}}
+type: Opaque
