--- a/charts/templates/all-deployments.yaml
+++ b/charts/templates/all-deployments.yaml
@@ -5,6 +5,7 @@
   {{- $storageName := .Values.storage.name }}
   {{- $env := .Values.env | default "dev" }}
   {{- with .Values.sr_terrain }}
+
 # 1. terrain
 
 kind: Deployment
@@ -60,7 +61,7 @@ spec:
 ---
 
   {{- with .Values.sr_manager }}
-
+  {{- $name := .Values.sr_manager.name }}
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -114,7 +115,7 @@ spec:
             - name: {{ $k }}
               valueFrom:
                 configMapKeyRef:
-                  name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
+                  name: "{{ $namespace }}-{{ $env }}-{{ $name }}-cm"
                   key: {{ $k }}
             {{- end }}      
                         
@@ -133,7 +134,7 @@ spec:
 ---
 
   {{- with .Values.sr_layers_3d }}
-
+  {{- $name := .Values.sr_layers_3d.name }}
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -187,7 +188,7 @@ spec:
             - name: {{ $k }}
               valueFrom:
                 configMapKeyRef:
-                  name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
+                  name: "{{ $namespace }}-{{ $env }}-{{ $name }}-cm"
                   key: {{ $k }}
             {{- end }}      
                         
@@ -206,7 +207,7 @@ spec:
 
 
   {{- with .Values.sr_3dtiles }}
-
+  {{- $name := .Values.sr_3dtiles.name }}
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -250,7 +251,7 @@ spec:
             - name: {{ $k }}
               valueFrom:
                 configMapKeyRef:
-                  name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
+                  name: "{{ $namespace }}-{{ $env }}-{{ $name }}-cm"
                   key: {{ $k }}
             {{- end }}      
                         
