--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -38,25 +38,25 @@ sr_manager:
       replicaCount: 1
   environments:
     #MANAGER_PORT: '4000'
-    DB_HOST: dev-sr-postgre-server.postgres.database.azure.com
+    DB_HOST: "dev-sr-postgre-server.postgres.database.azure.com"
     #DB_PORT: '5432'
     #POOL_SIZE: '20'
     DB_DATABASE: bereshit_sr_ssd
-    PS_SERVER_URL: http://ps/services/
-    ALGO_SERVER_URL: http://10.14.1.41:9000/
-    ALGO_TEXTURE_URL: http://10.14.1.41:9000/
-    ESTATE_FILEDOWNLOAD_URL: http://10.14.1.41:4000/download/estate/files/
-    TILES_URL: http://10.14.1.41:8082/
-    PS3D_SERVER_ROUTE: http://10.14.1.41:4020/
-    IMPORT_ESTATE_SERVER_ROUTE: http://10.14.1.41:4000/
-    LOGS_PATH: /data/SR/assets/Logs/LogsRbManager
-    SCHEME_DOMINANT_ATTR: F_CODE
-    JOB_LOG_PATH: /data/SR/assets/Logs/LogsJobs
+    PS_SERVER_URL: "http://ps/services/"
+    ALGO_SERVER_URL: "http://10.14.1.41:9000/"
+    ALGO_TEXTURE_URL: "http://10.14.1.41:9000/"
+    ESTATE_FILEDOWNLOAD_URL: "http://10.14.1.41:4000/download/estate/files/"
+    TILES_URL: "http://10.14.1.41:8082/"
+    PS3D_SERVER_ROUTE: "http://10.14.1.41:4020/"
+    IMPORT_ESTATE_SERVER_ROUTE: "http://10.14.1.41:4000/"
+    LOGS_PATH: "/data/SR/assets/Logs/LogsRbManager"
+    SCHEME_DOMINANT_ATTR: "F_CODE"
+    JOB_LOG_PATH: "/data/SR/assets/Logs/LogsJobs"
     #SR_TEMP_DATASOURCE: '287'
-    PSDBS_URL: http://10.14.1.12:8085
-    SR_GATE_URL: http://10.14.1.12:4052
-    PGSSLMODE: require
-    TZ: Asia/Jerusalem
+    PSDBS_URL: "http://10.14.1.12:8085"
+    SR_GATE_URL: "http://10.14.1.12:4052"
+    PGSSLMODE: "require"
+    TZ: "Asia/Jerusalem"
   network:
     deployment: sr-manager
     name: sr-manager
