--- a/charts/templates/all-configmaps.yaml
+++ b/charts/templates/all-configmaps.yaml
@@ -11,35 +11,35 @@ data:
   {{ $k }}: "{{ $v }}"
   {{- end }}
 {{- end }}
-# ---
+---
 
-# {{- with .Values.sr_layers_3d }}
-# apiVersion: "v1"
-# kind: "ConfigMap"
-# metadata:
-#   name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
-#   namespace: {{ $namespace }}
-# data:
-#   {{- range $k, $v := .environments }}
-#   {{ $k }}: {{ $v }}
-#   {{- end }}
-# {{- end }}
+{{- with .Values.sr_layers_3d }}
+apiVersion: "v1"
+kind: "ConfigMap"
+metadata:
+  name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
+  namespace: {{ $namespace }}
+data:
+  {{- range $k, $v := .environments }}
+  {{ $k }}: "{{ $v }}"
+  {{- end }}
+{{- end }}
 
-# ---
+---
 
-# {{- with .Values.sr_3dtiles }}
-# apiVersion: "v1"
-# kind: "ConfigMap"
-# metadata:
-#   name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
-#   namespace: {{ $namespace }}
-# data:
-#   {{- range $k, $v := .environments }}
-#   {{ $k }}: {{ $v }}
-#   {{- end }}
-# {{- end }}
+{{- with .Values.sr_3dtiles }}
+apiVersion: "v1"
+kind: "ConfigMap"
+metadata:
+  name: "{{ $namespace }}-{{ $env }}-{{ .name }}-cm"
+  namespace: {{ $namespace }}
+data:
+  {{- range $k, $v := .environments }}
+  {{ $k }}: "{{ $v }}"
+  {{- end }}
+{{- end }}
 
 
-# ---
+---
 
 
