--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -43,18 +43,18 @@ sr_manager:
     POOL_SIZE: "20"
     DB_DATABASE: bereshit_sr_ssd
     PS_SERVER_URL: "http://ps/services/"
-    ALGO_SERVER_URL: "http://10.14.1.41:9000/"
-    ALGO_TEXTURE_URL: "http://10.14.1.41:9000/"
+    ALGO_SERVER_URL: "http://192.168.115.34:9000/"
+    ALGO_TEXTURE_URL: "http://192.168.115.34:9000/"
     ESTATE_FILEDOWNLOAD_URL: "http://10.14.1.41:4000/download/estate/files/"
-    TILES_URL: "http://10.14.1.41:8082/"
-    PS3D_SERVER_ROUTE: "http://10.14.1.41:4020/"
+    TILES_URL: "http://192.168.115.25:8082/"
+    PS3D_SERVER_ROUTE: "http://192.168.115.31:4020/"
     IMPORT_ESTATE_SERVER_ROUTE: "http://10.14.1.41:4000/"
     LOGS_PATH: "/data/SR/assets/Logs/LogsRbManager"
     SCHEME_DOMINANT_ATTR: "F_CODE"
     JOB_LOG_PATH: "/data/SR/assets/Logs/LogsJobs"
     SR_TEMP_DATASOURCE: "287"
-    PSDBS_URL: "http://10.14.1.12:8085"
-    SR_GATE_URL: "http://10.14.1.12:4052"
+    PSDBS_URL: "http://192.168.115.30:8090"
+    SR_GATE_URL: "http://192.168.115.35:4052"
     PGSSLMODE: "require"
     TZ: "Asia/Jerusalem"
   network:
@@ -78,8 +78,8 @@ sr_layers_3d:
     POOL_SIZE: "20"
     DB_DATABASE: "sr_3d_layers"
     TILESET_URL: "http://10.14.1.41/layers3Dexp"
-    TILES_URL: "http://10.14.1.41:8082/"
-    PS_3D_SERVER_ADDREES: "10.14.1.41"
+    TILES_URL: "http://192.168.115.25:8082/"
+    PS_3D_SERVER_ADDREES: "192.168.115.31"
     IMPORT_DIRECTORY: "/data/SR/layers"
     LOGS_PATH: "/data/SR/assets/Logs/Logsrb3DServer"
     TZ: "Asia/Jerusalem"
@@ -98,8 +98,8 @@ sr_3dtiles:
       imageName: lmy/3d-tileset-server
       replicaCount: 1
   environments:
-    CONFIG_SERVICE_PATH: "http://rb-manager-sr-editor.apps.cgr2ll7c.northeurope.aroapp.io:80/TilesConfig"
-    LAYAR_SERVICE_PATH: "http://ps3d-server-sr-editor.apps.cgr2ll7c.northeurope.aroapp.io:80"
+    CONFIG_SERVICE_PATH: "http://192.168.115.33:4000/TilesConfig"
+    LAYAR_SERVICE_PATH: "http://192.168.115.31:4020"
     DATA_SOURCE_MAP_PATH: "/data/SR/layers/3DTilesSharedBatchMap.json"
     TILES_SET_DIRECTORY: "/data/SR/layers"
     MAX_FILED_DAYS: "14d"
